[project]
name = "cdk-simple-constructs-python"
version = "0.0.1"
requires-python = ">=3.10"

dynamic = ["dependencies"]

readme = "README.md"

authors = [
    { name = "Guy Wilson", email = "guywilsonjr@gmail.com" },
]
maintainers = [
    { name = "Guy Wilson", email = "guywilsonjr@gmail.com" },
]
keywords = [
    "aws",
    "cdk",
    "lambda",
    "python",
    "api",
    "gateway",
    "rest",
]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: Apple Public Source License",    # Specify the Python versions you support here.
    "Framework :: AWS CDK :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
[project.urls]
Homepage = "https://github.com/guywilsonjr/cdk-simple-constructs-python"
Repository = "https://github.com/guywilsonjr/cdk-simple-constructs-python"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cdk_simple_constructs_python"]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

